--- a/assets/css/ui/components/_advanced-search-sidebar.scss
+++ b/assets/css/ui/components/_advanced-search-sidebar.scss
@@ -3,6 +3,11 @@
     .advsrchlabel {
 		line-height: 1.8;
         font-size: 21px;
+        margin-top: -6px;
+    
+    display: block;
+    width: 112px;
+    float: left;
 	}
 
     .topbar {
