--- a/assets/css/ui/components/_gallery-page.scss
+++ b/assets/css/ui/components/_gallery-page.scss
@@ -48,3 +48,25 @@
     padding: 0;
     }
 }
+
+#group_layout3 {
+
+    .groupbox .titlebar p.title, .groupbox .titlebar p.info {
+        font-weight: normal;
+    font-size: 11px;
+    display: block;
+    text-align: left;
+    padding: 0 10px;
+
+    }
+
+}
+
+
+
+.categorypagetable {
+
+    .titlecolumn h1 {
+        font-size: 21px;
+    }
+}
