--- a/assets/css/ui/components/_footer.scss
+++ b/assets/css/ui/components/_footer.scss
@@ -17,6 +17,15 @@
     }
 }
 
+.fw.bg-grey {
+    padding-top: 20px !important;
+    padding-bottom: 20px !important;
+
+    h3 {
+        padding-top: 0 !important;
+    }
+}
+
 .poweredbox {
 	display: none;
 }
@@ -28,8 +37,6 @@
 .col-4 {
     width: 25%;
     float: left;
-	@include vendor(box-sizing, border-box);
-	padding: 0 4% !important;
 }
 .customfooter {
 
@@ -47,7 +54,7 @@
 
     li {
         margin-bottom: 6px !important;
-        margin-top: 6px !important;
+        margin-top: 0px !important;
         font-size: 14px;
     }
 
@@ -71,8 +78,11 @@
 	-webkit-columns: 4;
 	   -moz-columns: 4;
 			columns: 4;
+            -webkit-column-gap: 0px; /* Chrome, Safari, Opera */
+    -moz-column-gap: 0px; /* Firefox */
+    column-gap: 0px;
 }
 
-.sitemap .fw:first-of-type {
+.sitemap .fw {
 	padding: 0 4.1%;
 }
