--- a/assets/css/ui/components/_homepage.scss
+++ b/assets/css/ui/components/_homepage.scss
@@ -45,6 +45,9 @@
             overflow: visible;
             height: 24px;
             font-size: 11px;
+            padding-left: 5px;
+    padding-right: 5px;
+    box-sizing: border-box;
         }
 
         .galleries-scroller {
